@@ -1,3 +1,7 @@
+_2009_08_24__11_49_48_ Chi-Hsiu Liang
+
+  * Draw colors in SketchUp by random number.
+
 2009-Aug-21 Chi-Hsiu Liang
 
   * Add some code using SketchUp to plot PES.
